# Aeon_Project-

./: README.md  web_bridge.py
core/: Cargo.toml
core/src/: error.rs  ffi.rs  lib.rs  main.rs
core/src/identity/: motion.rs
core/src/judge/: mod.rs  sprt.rs
core/src/network/: behaviour.rs  mod.rs  service.rs
core/src/router/: pid.rs
ui/: index.html
