[package]
name = "aeon_core"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib -> برای خروجی اندروید (.so)
# rlib   -> برای خروجی ترموکس و تست (cargo run)
crate-type = ["cdylib", "rlib"]

[dependencies]
libm = "0.2"
rand = "0.8"
rand_chacha = "0.3"
blake3 = "1.5"
futures = "0.3"

# ابزارهای FFI
libc = "0.2"
lazy_static = "1.4"

tokio = { version = "1.32", features = ["full"] }
libp2p = { version = "0.52.4", features = ["tcp", "dns", "quic", "noise", "yamux", "gossipsub", "kad", "identify", "ping", "relay", "dcutr", "autonat", "macros", "tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jni = "0.21.1"

[[bin]]
name = "aeon_node"
path = "src/main.rs"
